--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
 
 	<div id="surface">
 
+		<div id="title">
+			<h1>Zelda Collecting Game</h1>
+		</div>
 		<div id="dashboard">
 			<input placeholder="NAME" type="text" id="name">
 			<div id="startButton" onclick="startGame()">START</div>
